updated on 30-Nov-23

--- a/learn-generative-ai/01_aoa.ipynb
+++ b/learn-generative-ai/01_aoa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'chatcmpl-8Q5v4kakqCUDsl5xmYc4I6JeZCX42',\n",
+       " 'choices': [Choice(finish_reason='stop', index=0, message=ChatCompletionMessage(content='1+1 equals 2.', role='assistant', function_call=None, tool_calls=None))],\n",
+       " 'created': 1701229974,\n",
+       " 'model': 'gpt-3.5-turbo-1106',\n",
+       " 'object': 'chat.completion',\n",
+       " 'system_fingerprint': 'fp_eeff13170a',\n",
+       " 'usage': CompletionUsage(completion_tokens=7, prompt_tokens=14, total_tokens=21)}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'1+1 equals 2.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,10 +100,9 @@
     "        ],\n",
     "        model=\"gpt-3.5-turbo-1106\",\n",
     "    )\n",
-    "# print(response)\n",
-    "#  print(response.choices[0].message.content)\n",
-    " return response.choices[0].message.content\n",
     "\n",
+    " display(dict(response))\n",
+    " return response.choices[0].message.content\n",
     "chat_completion(\"what is 1+1?\")"
    ]
   }
